# Machine_learning

./: CMakeLists.txt  README.md  lib.c  main.c  rand_o_hand.c
Reinforcement_learning/: lib.c  lib.h  main.c
Rock-paper-scissors/: lib.c  lib.h
